# CatFact

./: .gitignore  LICENSE  README.md
javaCatFactConsole/src/: Main.java
kmCatFact/: .gitignore  build.gradle  gradle.properties  settings.gradle
kmCatFact/src/commonMain/kotlin/: CatFactRepoistory.kt  CatFactService.kt  HttpClientProvider.kt
kmCatFact/src/jsMain/kotlin/: HttpClientProvider.kt  entry.kt
kmCatFact/src/jvmMain/kotlin/: HttpClientProvider.kt
kmCatFact/src/nativeMain/kotlin/: HttpClientProvider.kt  SuspendInvoker.kt
ktCatFactConsole/: build.gradle  settings.gradle
ktCatFactConsole/src/main/kotlin/: Main.kt
webJsCatFactApp/: package.json
webJsCatFactApp/js/: main.js
winCatFactConsole/: CMakeLists.txt  main.cpp
